--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ packaging==23.1
 pandas==2.0.3
 pathlib2==2.3.7.post1
 Pillow==10.0.1
-pkg_resources==0.0.0
+# pkg_resources==0.0.0  # 已移除，这个包在Python 3.8+中不需要
 pkgutil_resolve_name==1.3.10
 portalocker==2.8.2
 psutil==5.9.5
